...
                                                        <rect key="frame" x="0.0" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" red="0.82794936429999999" green="0.82794936429999999" blue="0.82794936429999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Clean"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="WrO-Of-oRH" secondAttribute="height" multiplier="1:1" id="noh-Dh-4MG"/>
...
                                                        <rect key="frame" x="101" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" red="0.82794936429999999" green="0.82794936429999999" blue="0.82794936429999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Sign"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="r0P-TU-V73" secondAttribute="height" multiplier="1:1" id="ys9-Oc-YBe"/>
...
                                                        <rect key="frame" x="202" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" red="0.82794936429999999" green="0.82794936429999999" blue="0.82794936429999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Percentage"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="NA7-uv-W8m" secondAttribute="height" multiplier="1:1" id="sMJ-pm-QF7"/>
...
                                                        <rect key="frame" x="303" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" red="0.93856143951416016" green="0.60824352502822876" blue="0.21554484963417053" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Division"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="M1N-Y0-teI" secondAttribute="height" multiplier="1:1" id="Mdg-6j-75S"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NumberSeven"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="QaQ-JY-QTP" secondAttribute="height" multiplier="1:1" id="Bch-5c-gI7"/>
...
                                                        <rect key="frame" x="101" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NumberEight"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="zyR-Fk-G3D" secondAttribute="height" multiplier="1:1" id="CY7-Ek-TpM"/>
...
                                                        <rect key="frame" x="202" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NumberNine"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="Gyg-8o-8Om" secondAttribute="height" multiplier="1:1" id="gPF-sO-Eds"/>
...
                                                        <rect key="frame" x="303" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" red="0.93856143951416016" green="0.60824352502822876" blue="0.21554484963417053" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Multiplication"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="f3p-fp-yrZ" secondAttribute="height" multiplier="1:1" id="7I9-Me-H6I"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NumberFour"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="cKn-Ud-ujL" secondAttribute="height" multiplier="1:1" id="V8l-ok-qok"/>
...
                                                        <rect key="frame" x="101" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NumberFive"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="v4I-G0-7Az" secondAttribute="height" multiplier="1:1" id="EaS-L0-QJM"/>
...
                                                        <rect key="frame" x="202" y="0.0" width="91" height="91"/>
                                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="NumberSix"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="Fzv-1T-7mt" secondAttribute="height" multiplier="1:1" id="yAX-Im-mGr"/>
...
                                                        <rect key="frame" x="303" y="0.0" width="91" height="91"/>
